--- a/part3/phonebook-1-6/package.json
+++ b/part3/phonebook-1-6/package.json
@@ -7,11 +7,8 @@
     "start": "node index.js",
     "dev": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build:ui": "rm -rf build && cd ../../part2/phonebook/ && npm run build --prod && cp -r build ../../part3/phonebook-8",
-    "deploy": "git push heroku main",
-    "deploy:full": "npm run build:ui && git add . && git commit -m uibuild && git push && npm run deploy",    
-    "logs:prod": "heroku logs --tail"  },
-  "proxy": "http://localhost:3001",
+    "build": "react-scripts build"
+  },
   "author": "",
   "license": "ISC",
   "dependencies": {
