--- a/part3/phonebook-8/package.json
+++ b/part3/phonebook-8/package.json
@@ -7,7 +7,7 @@
     "start": "node index.js",
     "dev": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build:ui": "rm -rf build && cd ../../part2/phonebook/ && npm run build --prod && cp -r build ../../part3/phonebook-8",
+    "build:ui": "rm -rf build && cd ../phonebook-front-9-11/ && npm run build --prod && cp -r build ../../part3/phonebook-8",
     "deploy": "git push heroku main",
     "deploy:full": "npm run build:ui && git add . && git commit -m 'build' && git push && npm run deploy",    
     "logs:prod": "heroku logs --tail"  },
