--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "build:ui": "rm -rf build && cd ../../part2/phonebook/ && npm run build --prod && cp -r build ../../part3/phonebook-8",
-    "deploy": "git push heroku main",
+    "deploy": "git push heroku",
     "deploy:full": "npm run build:ui && git add . && git commit -m 'build' && git push && npm run deploy",    
     "logs:prod": "heroku logs --tail"  },
   "proxy": "http://localhost:3001",
