--- a/part3/phonebook-12/package.json
+++ b/part3/phonebook-12/package.json
@@ -6,7 +6,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build:ui": "rm -rf build && cd ../../part2/phonebook/ && npm run build --prod && cp -r build ../../part3/phonebook-12",
     "deploy": "git push heroku",
-    "deploy:full": "npm run build:ui && git add . && git commit -m 'build' && git push && npm run deploy"
+    "deploy:full": "npm run build:ui && git add . && git commit -m 'build' && git push && npm run deploy",
+    "lint": "eslint ."
   },
   "proxy": "http://localhost:3001",
   "dependencies": {
@@ -15,5 +16,8 @@
     "express": "^4.17.1",
     "mongoose-unique-validator": "^2.0.3",
     "morgan": "^1.10.0"
+  },
+  "devDependencies": {
+    "eslint": "^7.30.0"
   }
 }
