--- a/part4/blog-list/package.json
+++ b/part4/blog-list/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node index.js",
     "dev": "nodemon index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest --verbose"
   },
   "proxy": "http://localhost:3001",
   "author": "JL",
@@ -17,5 +17,12 @@
     "express": "^4.17.1",
     "http": "^0.0.1-security",
     "mongoose": "^5.13.5"
+  },
+  "devDependencies": {
+    "eslint": "^7.32.0",
+    "jest": "^27.0.6"
+  }, 
+ "jest": {
+  "testEnvironment": "node"
   }
 }
