--- a/part4/blog-list/package.json
+++ b/part4/blog-list/package.json
@@ -16,13 +16,14 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "http": "^0.0.1-security",
+    "lodash": "^4.17.21",
     "mongoose": "^5.13.5"
   },
   "devDependencies": {
     "eslint": "^7.32.0",
     "jest": "^27.0.6"
-  }, 
- "jest": {
-  "testEnvironment": "node"
+  },
+  "jest": {
+    "testEnvironment": "node"
   }
 }
